qc pass: p4lang: gre interface verify source
qc pass: p4lang: l2tp interface verify source
---------------------------------- 2022-02-27 21:02:01
qc pass: verify source with ethernet encapsulation
qc pass: interop1: verify source
qc pass: interop2: verify source
qc pass: interop8: verify source
qc pass: interop9: verify source
qc pass: verify source with static routing
---------------------------------- 2022-02-27 21:16:26
qc pass: loose verify source with ethernet encapsulation
qc pass: p4lang: interface loose verify source
qc pass: p4lang: vlan interface loose verify source
qc pass: p4lang: bridge interface loose verify source
qc pass: p4lang: pppoe interface loose verify source
qc pass: p4lang: gre interface loose verify source
qc pass: p4lang: l2tp interface loose verify source
qc pass: loose verify source with static routing
---------------------------------- 2022-03-01 17:43:52
qc pass: p4lang demultiplexer
qc pass: p4lang downlink
---------------------------------- 2022-03-01 18:08:42
no qc pass: p4lang downlink
no qc pass: p4lang demultiplexer
qc pass: unnamed
qc pass: unnamed
---------------------------------- 2022-03-01 18:18:03
no qc pass: unnamed
no qc pass: unnamed
qc pass: p4lang demultiplexer
qc pass: p4lang downlink
---------------------------------- 2022-03-03 06:49:36
todo: quic
todo: bgp flowspec v2
todo: tcp window scale
---------------------------------- 2022-03-03 08:07:30
todo: update gtp stack to the latest standards, add to dataplanes
---------------------------------- 2022-03-03 11:37:03
qc pass: ipv4 over gtp
qc pass: ipv6 over gtp
qc pass: ipv4 and ipv6 over gtp
---------------------------------- 2022-03-03 11:46:08
no qc pass: ipv4 and ipv6 over gtp
no qc pass: ipv6 over gtp
qc pass: unnamed
qc pass: unnamed
---------------------------------- 2022-03-03 11:54:43
no qc pass: unnamed
no qc pass: unnamed
qc pass: ipv6 over gtp
qc pass: ipv4 and ipv6 over gtp
---------------------------------- 2022-03-03 12:31:33
qc pass: gtp tunnel