@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.3.3-cur, done by cs@nop.
--;-;-;2022-03-03 13:50:39, took 00:07:10, with 100 workers, on 2768 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2022-03-03 17:37:21, took 00:06:56, with 100 workers, on 2774 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -1395,6 +1395,8 @@ http://sources.nop.hu/cfg/p4lang-acl77.tst;p4lang-acl77.tst;success;p4lang: brid
 http://sources.nop.hu/cfg/p4lang-acl78.tst;p4lang-acl78.tst;success;p4lang: pppoe interface loose verify source
 http://sources.nop.hu/cfg/p4lang-acl79.tst;p4lang-acl79.tst;success;p4lang: gre interface loose verify source
 http://sources.nop.hu/cfg/p4lang-acl80.tst;p4lang-acl80.tst;success;p4lang: l2tp interface loose verify source
+http://sources.nop.hu/cfg/p4lang-acl81.tst;p4lang-acl81.tst;success;p4lang: ingress gtp access list
+http://sources.nop.hu/cfg/p4lang-acl82.tst;p4lang-acl82.tst;success;p4lang: egress gtp access list
 http://sources.nop.hu/cfg/p4lang-crypt001.tst;p4lang-crypt001.tst;success;p4lang: macsec with des
 http://sources.nop.hu/cfg/p4lang-crypt002.tst;p4lang-crypt002.tst;success;p4lang: macsec with 3des
 http://sources.nop.hu/cfg/p4lang-crypt003.tst;p4lang-crypt003.tst;success;p4lang: macsec with aes128cbc
@@ -1688,6 +1690,10 @@ http://sources.nop.hu/cfg/p4lang-rout182.tst;p4lang-rout182.tst;success;p4lang: 
 http://sources.nop.hu/cfg/p4lang-rout183.tst;p4lang-rout183.tst;success;p4lang: mpolka vlan core
 http://sources.nop.hu/cfg/p4lang-rout184.tst;p4lang-rout184.tst;success;p4lang: mpolka edge
 http://sources.nop.hu/cfg/p4lang-rout185.tst;p4lang-rout185.tst;success;p4lang: mpolka vlan edge
+http://sources.nop.hu/cfg/p4lang-rout186.tst;p4lang-rout186.tst;success;p4lang: gtp server over ipv4
+http://sources.nop.hu/cfg/p4lang-rout187.tst;p4lang-rout187.tst;success;p4lang: gtp server over ipv6
+http://sources.nop.hu/cfg/p4lang-rout188.tst;p4lang-rout188.tst;success;p4lang: gtp server over ipv4 loopback
+http://sources.nop.hu/cfg/p4lang-rout189.tst;p4lang-rout189.tst;success;p4lang: gtp server over ipv6 loopback
 http://sources.nop.hu/cfg/qos-action01.tst;qos-action01.tst;success;qos ingress transmit action
 http://sources.nop.hu/cfg/qos-action02.tst;qos-action02.tst;success;qos egress transmit action
 http://sources.nop.hu/cfg/qos-action03.tst;qos-action03.tst;success;qos ingress drop action
