@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.3.3-cur, done by cs@nop.<br/>
-tested: 2022-03-03 13:50:39, took 00:07:10, with 100 workers, on 2768 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2022-03-03 17:37:21, took 00:06:56, with 100 workers, on 2774 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1408,6 +1408,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl78.tst">p4lang-acl78.tst</a></td><td>success</td><td>p4lang: pppoe interface loose verify source</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl79.tst">p4lang-acl79.tst</a></td><td>success</td><td>p4lang: gre interface loose verify source</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl80.tst">p4lang-acl80.tst</a></td><td>success</td><td>p4lang: l2tp interface loose verify source</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl81.tst">p4lang-acl81.tst</a></td><td>success</td><td>p4lang: ingress gtp access list</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl82.tst">p4lang-acl82.tst</a></td><td>success</td><td>p4lang: egress gtp access list</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt001.tst">p4lang-crypt001.tst</a></td><td>success</td><td>p4lang: macsec with des</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt002.tst">p4lang-crypt002.tst</a></td><td>success</td><td>p4lang: macsec with 3des</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt003.tst">p4lang-crypt003.tst</a></td><td>success</td><td>p4lang: macsec with aes128cbc</td></tr>
@@ -1701,6 +1703,10 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-rout183.tst">p4lang-rout183.tst</a></td><td>success</td><td>p4lang: mpolka vlan core</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-rout184.tst">p4lang-rout184.tst</a></td><td>success</td><td>p4lang: mpolka edge</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-rout185.tst">p4lang-rout185.tst</a></td><td>success</td><td>p4lang: mpolka vlan edge</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-rout186.tst">p4lang-rout186.tst</a></td><td>success</td><td>p4lang: gtp server over ipv4</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-rout187.tst">p4lang-rout187.tst</a></td><td>success</td><td>p4lang: gtp server over ipv6</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-rout188.tst">p4lang-rout188.tst</a></td><td>success</td><td>p4lang: gtp server over ipv4 loopback</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-rout189.tst">p4lang-rout189.tst</a></td><td>success</td><td>p4lang: gtp server over ipv6 loopback</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/qos-action01.tst">qos-action01.tst</a></td><td>success</td><td>qos ingress transmit action</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/qos-action02.tst">qos-action02.tst</a></td><td>success</td><td>qos egress transmit action</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/qos-action03.tst">qos-action03.tst</a></td><td>success</td><td>qos ingress drop action</td></tr>
